--- a/publican/po/de.po
+++ b/publican/po/de.po
@@ -1,17 +1,21 @@
+# SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# omiT sknirT <moc.tahter@sknirtt, 2010.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: de\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2010-10-13 15:20+1000\n"
-"Last-Translator: omiT sknirT <moc.tahter@sknirtt\n"
-"Language-Team: Vogon <vogon@li.org>\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"X-Generator: Zanata 1.6.1\n"
 
 #: lib/Publican/TreeView.pm:200
 msgid ""
@@ -52,7 +56,8 @@ msgstr ""
 
 #. ('db_file',$site_config)
 #: lib/Publican/WebSite.pm:145
-msgid "%1 is a mandatory field in a site configuration file. Check %2 for validity."
+msgid ""
+"%1 is a mandatory field in a site configuration file. Check %2 for validity."
 msgstr ""
 
 #. ('cmd')
@@ -91,7 +96,9 @@ msgstr ""
 
 #. ($language)
 #: lib/Publican/Builder.pm:1490
-msgid "'%1' is not a valid language for highlighting. Language names are case sensitive."
+msgid ""
+"'%1' is not a valid language for highlighting. Language names are case "
+"sensitive."
 msgstr ""
 
 #: lib/Publican/Builder.pm:1573 lib/Publican/Builder.pm:1588
@@ -138,7 +145,10 @@ msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:644
-msgid "*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, may generate invalid xhtml, or may breach Section 508 Accessibility standards."
+msgid ""
+"*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, "
+"may generate invalid xhtml, or may breach Section 508 Accessibility "
+"standards."
 msgstr ""
 
 #: bin/publican:122
@@ -146,15 +156,21 @@ msgid "/path/to/install/to"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:99
-msgid "<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to view the Navigation options without JavaScript enabled</p>"
+msgid ""
+"<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable "
+"JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
+"view the Navigation options without JavaScript enabled</p>"
 msgstr ""
 
 #: lib/Publican.pm:85
-msgid "A comma-separated list of XML attributes that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML attributes that are not permitted in the "
+"source."
 msgstr ""
 
 #: lib/Publican.pm:91
-msgid "A comma-separated list of XML tags that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
 
 #: lib/Publican.pm:297
@@ -162,7 +178,11 @@ msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:242
-msgid "A short overview and summary of the book's subject and purpose, traditionally no more than one paragraph long. Note: the abstract will appear in the front matter of your book and will also be placed in the description field of the book's RPM spec file."
+msgid ""
+"A short overview and summary of the book's subject and purpose, "
+"traditionally no more than one paragraph long. Note: the abstract will "
+"appear in the front matter of your book and will also be placed in the "
+"description field of the book's RPM spec file."
 msgstr ""
 
 #: lib/Publican.pm:80
@@ -186,7 +206,9 @@ msgid "Add an entry to the revision history"
 msgstr ""
 
 #: bin/publican:272
-msgid "Add or remove database entries. Used for processing pre-build books, such as when building packages."
+msgid ""
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -217,7 +239,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:106
 msgid "Books"
-msgstr "Bücher"
+msgstr ""
 
 #. ($brand)
 #: lib/Publican/Builder.pm:526
@@ -364,10 +386,12 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:104
 msgid "Code"
-msgstr "Code"
+msgstr ""
 
 #: bin/publican:105
-msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,txt,epub"
+msgid ""
+"Comma-separated list of formats, for example: html,pdf,html-single,html-"
+"desktop,txt,epub"
 msgstr ""
 
 #: bin/publican:108
@@ -544,12 +568,16 @@ msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
-msgid "ERROR: Banned attribute (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned attribute (%1) detected. Discuss this with your brands owners "
+"if you think this is in error."
 msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:622
-msgid "ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #. ($revnumber,q|\d[0-9.]*-\d[0-9.]*|)
@@ -613,15 +641,21 @@ msgid "FATAL ERROR: %1:%2 in %3 on line %4: %5"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:362
-msgid "FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root node."
+msgid ""
+"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root"
+" node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:383
-msgid "FATAL ERROR: condition profiling would prune root node. Do NOT set condition in a root node."
+msgid ""
+"FATAL ERROR: condition profiling would prune root node. Do NOT set condition"
+" in a root node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:343
-msgid "FATAL ERROR: language profiling would prune root node. Do NOT set lang in a root node."
+msgid ""
+"FATAL ERROR: language profiling would prune root node. Do NOT set lang in a "
+"root node."
 msgstr ""
 
 #: lib/Publican/Builder.pm:1153
@@ -674,7 +708,8 @@ msgstr ""
 
 #. ($pot_file,$po_file)
 #: lib/Publican/Translate.pm:271
-msgid "Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
+msgid ""
+"Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
 msgstr ""
 
 #. ($book,$?)
@@ -711,7 +746,9 @@ msgid "For HTML, should the first section be on the same page as its parent?"
 msgstr ""
 
 #: lib/Publican.pm:122
-msgid "For HTML, what is the deepest level of nesting at which a section should be split onto its own page?"
+msgid ""
+"For HTML, what is the deepest level of nesting at which a section should be "
+"split onto its own page?"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:120
@@ -719,7 +756,9 @@ msgid "Formats"
 msgstr ""
 
 #: lib/Publican.pm:349
-msgid "Full path for the publican site configuration file for non standard RPM websites."
+msgid ""
+"Full path for the publican site configuration file for non standard RPM "
+"websites."
 msgstr ""
 
 #: lib/Publican/Translate.pm:982
@@ -794,7 +833,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:94
 msgid "Language"
-msgstr "Sprache"
+msgstr ""
 
 #: lib/Publican.pm:364
 msgid "Language in which XML is authored."
@@ -835,7 +874,9 @@ msgid "Missing mandatory field '%1' in revision."
 msgstr ""
 
 #: lib/Publican.pm:1179
-msgid "NOTE: These lists of tags and attributes are brand specific and are not part of Publican itself."
+msgid ""
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:220
@@ -843,11 +884,15 @@ msgid "NOTE: the href does not contain a language! This is CORRECT!"
 msgstr ""
 
 #: lib/Publican.pm:359
-msgid "Name of site package for non standard RPM websites. Required to ensure the site is installed."
+msgid ""
+"Name of site package for non standard RPM websites. Required to ensure the "
+"site is installed."
 msgstr ""
 
 #: lib/Publican.pm:160
-msgid "Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if not set in cfg file."
+msgid ""
+"Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if "
+"not set in cfg file."
 msgstr ""
 
 #: lib/Publican/TreeView.pm:274
@@ -886,7 +931,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:336
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:205
@@ -902,7 +948,9 @@ msgid "Override the default TOC path."
 msgstr ""
 
 #: lib/Publican.pm:329
-msgid "Override the default search form for a Publican website. By default this will use Google search and do a site search if web_host is set."
+msgid ""
+"Override the default search form for a Publican website. By default this "
+"will use Google search and do a site search if web_host is set."
 msgstr ""
 
 #: lib/Publican.pm:261
@@ -918,7 +966,9 @@ msgid "Override the product, top level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:344
-msgid "Override the version, middle level, menu label on a Publican website. To hide this menu item set this to: UNUSED"
+msgid ""
+"Override the version, middle level, menu label on a Publican website. To "
+"hide this menu item set this to: UNUSED"
 msgstr ""
 
 #. ($po_file)
@@ -932,7 +982,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:108
 msgid "Packages"
-msgstr "Pakete"
+msgstr ""
 
 #: lib/Publican.pm:326
 msgid "Packages to obsolete in web RPM."
@@ -956,7 +1006,7 @@ msgstr ""
 
 #: lib/Publican/CreateBook.pm:326
 msgid "Preface"
-msgstr "Vorwort"
+msgstr ""
 
 #: bin/publican:199
 msgid "Print a list of QA'd DocBook tags"
@@ -994,17 +1044,18 @@ msgid "Processing file %1 -> %2"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:117
-#, fuzzy
 msgid "Product List"
-msgstr "Produkte"
+msgstr ""
 
 #: lib/Publican.pm:230
-msgid "Product this package covers. Fetched from productname tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:105
 msgid "Products"
-msgstr "Produkte"
+msgstr ""
 
 #: bin/publican:98
 msgid "Push SRPM to brew"
@@ -1065,7 +1116,8 @@ msgid "Run: '%1 <action> --help' for details on action usage"
 msgstr ""
 
 #: bin/publican:806
-msgid "Running clean process to ensure stale content is not bundled in packages."
+msgid ""
+"Running clean process to ensure stale content is not bundled in packages."
 msgstr ""
 
 #: lib/Publican/Builder.pm:2542
@@ -1074,7 +1126,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:1859 lib/Publican/WebSite.pm:830
 msgid "Search"
-msgstr "Suche"
+msgstr ""
 
 #: lib/Publican.pm:219
 msgid "Semicolon-separated list of menu categories for the desktop package."
@@ -1090,7 +1142,9 @@ msgid "Setting up %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2028
-msgid "Short-sighted packages can only be used to make desktop rpms. Add --desktop to your argument list."
+msgid ""
+"Short-sighted packages can only be used to make desktop rpms. Add --desktop "
+"to your argument list."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:119
@@ -1111,7 +1165,9 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:309
-msgid "Splash pages should be generated to be comaptible with this web style. Valid values are 1 and 2."
+msgid ""
+"Splash pages should be generated to be comaptible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1141,7 +1197,9 @@ msgid "Test Section 2"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:96
-msgid "The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality."
+msgid ""
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
 msgstr ""
 
 #: lib/Publican.pm:227
@@ -1181,7 +1239,9 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:214
-msgid "The name of the main xml and ent files for this books, sans file extension and language. Fetched from docname if not set."
+msgid ""
+"The name of the main xml and ent files for this books, sans file extension "
+"and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:114
@@ -1201,19 +1261,29 @@ msgid "The version of the product"
 msgstr ""
 
 #: bin/publican:124
-msgid "This flag tells publican the data being processed is a distributed set. Note: do not use distributed_set on the command line. Publican uses this flag when calling itself to process distributed sets. This is the only safe way this flag can be used."
+msgid ""
+"This flag tells publican the data being processed is a distributed set. "
+"Note: do not use distributed_set on the command line. Publican uses this "
+"flag when calling itself to process distributed sets. This is the only safe "
+"way this flag can be used."
 msgstr ""
 
 #: lib/Publican.pm:302
-msgid "This is a home page for a Publican-generated website, not a standard book."
+msgid ""
+"This is a home page for a Publican-generated website, not a standard book."
 msgstr ""
 
 #: lib/Publican.pm:321
-msgid "This is a host name for a Publican-generated website, used for searches and the Sitemap. Be sure to include the full path to your document tree. E.g. if your documents are in the docs directory: http://www.example.com/docs"
+msgid ""
+"This is a host name for a Publican-generated website, used for searches and "
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:316
-msgid "This is a special page for a Publican-generated website, not a standard book. Valid types are home, product, and version."
+msgid ""
+"This is a special page for a Publican-generated website, not a standard "
+"book. Valid types are home, product, and version."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:315
@@ -1222,7 +1292,7 @@ msgstr ""
 
 #: lib/Publican/CreateBook.pm:200 lib/Publican/CreateBook.pm:305
 msgid "This is a test paragraph"
-msgstr "Dies ist ein Test-Absatz"
+msgstr ""
 
 #: lib/Publican/CreateBook.pm:313
 msgid "This is a test paragraph in Section 2"
@@ -1233,20 +1303,23 @@ msgid "This is a test paragraph in a section"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:102
-msgid "This is an iframe, to view it upgrade your browser or enable iframe display."
+msgid ""
+"This is an iframe, to view it upgrade your browser or enable iframe display."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:113
-msgid "This web site requires JavaScript and cookies to be enabled to function correctly."
+msgid ""
+"This web site requires JavaScript and cookies to be enabled to function "
+"correctly."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:109
 msgid "Total Languages"
-msgstr "Sprachen gesamt"
+msgstr ""
 
 #: lib/Publican/WebSite.pm:110
 msgid "Total Packages"
-msgstr "Pakete gesamt"
+msgstr ""
 
 #. ($lang)
 #: lib/Publican/Translate.pm:1045
@@ -1272,15 +1345,20 @@ msgid "Translation files synchronised with XML sources %1-%2"
 msgstr ""
 
 #: lib/Publican.pm:276
-msgid "Type of content this package contains. Supported: set, book, article, brand"
+msgid ""
+"Type of content this package contains. Supported: set, book, article, brand"
 msgstr ""
 
 #: lib/Publican.pm:243
-msgid "Type of repository in which books that form part of a remote set are stored. Supported types: SVN."
+msgid ""
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:167
-msgid "URL for the documentation team for this package. Used for top right URL on HTML."
+msgid ""
+"URL for the documentation team for this package. Used for top right URL on "
+"HTML."
 msgstr ""
 
 #: lib/Publican.pm:236
@@ -1308,7 +1386,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:981 lib/Publican/WebSite.pm:111
 msgid "Untranslated"
-msgstr "Nicht übersetzt"
+msgstr ""
 
 #: bin/publican:255
 msgid "Update an existing sites templates."
@@ -1349,12 +1427,14 @@ msgid "Version of the DocBook DTD on which this project is based."
 msgstr ""
 
 #: lib/Publican.pm:288
-msgid "Version of this package. Fetched from productnumber tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:107
 msgid "Versions"
-msgstr "Versionen"
+msgstr ""
 
 #: lib/Publican/Translate.pm:733
 msgid "WARNING: Fuzzy message in PO file."
@@ -1366,7 +1446,9 @@ msgid "WARNING: Image missing: %1"
 msgstr ""
 
 #: lib/Publican/Translate.pm:747
-msgid "WARNING: Message missing from PO file, consider updating your POT and PO files."
+msgid ""
+"WARNING: Message missing from PO file, consider updating your POT and PO "
+"files."
 msgstr ""
 
 #. ($pot_file)
@@ -1384,15 +1466,21 @@ msgid "WARNING: Un-translated message in PO file."
 msgstr ""
 
 #: lib/Publican/Builder.pm:2249
-msgid "WARNING: You can not create RPM packages with a blank abstract. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2259
-msgid "WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:885
-msgid "WARNING: table validation failed. Could not determine table for tgroup, column numbers cannot be validated"
+msgid ""
+"WARNING: table validation failed. Could not determine table for tgroup, "
+"column numbers cannot be validated"
 msgstr ""
 
 #: bin/publican:100
@@ -1442,7 +1530,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:93
 msgid "collapse all"
-msgstr "Alles einklappen"
+msgstr ""
 
 #: lib/Publican.pm:693
 msgid "config loaded"
@@ -1689,12 +1777,3 @@ msgstr ""
 #: bin/publican:734
 msgid "you need to publish the brand first"
 msgstr ""
-
-#~ msgid "Map"
-#~ msgstr "Sitemap"
-
-#~ msgid "Statistics"
-#~ msgstr "Statistik"
-
-#~ msgid "Tech"
-#~ msgstr "Site-Technologie"
