--- a/publican/po/fr.po
+++ b/publican/po/fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2012-08-28 11:19-0400\n"
+"PO-Revision-Date: 2012-08-29 08:47-0400\n"
 "Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
 "Language-Team: French\n"
 "MIME-Version: 1.0\n"
@@ -1340,7 +1340,7 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr ""
+msgstr "Fichiers de traduction synchronisés avec les sources XML %1-%2"
 
 #: lib/Publican.pm:276
 msgid ""
