--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -1,14 +1,10 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# ykatabam <ykatabam@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-08-29 09:55-0400\n"
+"Last-Translator: ykatabam <ykatabam@fedoraproject.org>\n"
 "Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -162,9 +158,9 @@ msgid ""
 "JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
 "view the Navigation options without JavaScript enabled</p>"
 msgstr ""
-"<p>上記のナビゲーションメニューが正しく動作するには JavaScript が必要になります。</p> <p>JavaScript "
-"を有効にするとナビゲーションメニューが動作するようになります。</p> <p>JavaScript "
-"を有効にすることなくナビゲーションオプションを表示させる場合は CSS を無効にしてください。</p>"
+"<p>上記のナビゲーションメニューが正しく機能するには JavaScript が必要になります。</p> <p>JavaScript "
+"を有効にするとナビゲーションメニューが機能するようになります。</p> <p>JavaScript "
+"を有効にすることなくナビゲーションオプションを表示するには、CSS を無効にしてください。</p>"
 
 #: lib/Publican.pm:85
 msgid ""
@@ -1211,7 +1207,7 @@ msgid ""
 "The Navigation Menu below will automatically collapse when pages are loaded."
 " Enable cookies to fix the Navigation Menu functionality."
 msgstr ""
-"以下のナビゲーションメニューはページが読み込まれると自動的に折り畳まれます。 ナビゲーションメニューの機能性を修正する場合はクッキーを有効にします。"
+"以下のナビゲーションメニューはページが読み込まれると自動的に折り畳まれます。ナビゲーションメニューの機能を固定するにはクッキーを有効にしてください。"
 
 #: lib/Publican.pm:227
 msgid "The OS for which to build packages."
@@ -1356,7 +1352,7 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr ""
+msgstr "翻訳ファイルを XML sources %1-%2 と同期"
 
 #: lib/Publican.pm:276
 msgid ""
