--- a/publican/po/pt_BR.po
+++ b/publican/po/pt_BR.po
@@ -2,7 +2,6 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -1342,7 +1341,8 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr "Tradução de arquivos sincronizados com a versão %1-%2 de fontes do XML"
+msgstr ""
+"Tradução de arquivos sincronizados com a versão %1-%2 de fontes do XML"
 
 #: lib/Publican.pm:276
 msgid ""
@@ -1777,6 +1777,3 @@ msgstr ""
 #: bin/publican:734
 msgid "you need to publish the brand first"
 msgstr ""
-
-
-
